# RadarVisualizer

./: CMakeLists.txt  README.md  run.bat
source/: main.cpp  radarMessage.h  radarRenderer.cpp  radarRenderer.h
source/shaders/: PointFragmentShader.glsl  PointVertexShader.glsl  QuadFragmentShader.glsl  QuadVertexShader.glsl
